--- a/Documentation/documentation.html
+++ b/Documentation/documentation.html
@@ -72,7 +72,7 @@
       <pre>
 <code class="code">
 
-&lt;link rel="stylesheet" href="https://superui.netlify.app/superui.css">
+&lt;link rel="stylesheet" href="https://superui-comlib.netlify.app/superui.css">
 </code>
   </pre>
       <button id="copy-btn">Copy</button>
